<resources>
    <string name="app_name">Ledger Link</string>
    <string name="action_settings">Settings</string>
    <string name="action_vsla_profile">Profile</string>
    <string name="action_vsla_chat">Chat</string>
    <string name="action_vsla_mod">Mobile Overdraft</string>
    <string name="hello_world">Hello world!</string>
    <string name="empty_members_list">There are no members to display.</string>
    <string name="title_activity_end_cycle">End Cycle</string>
    <string name="title_activity_new_cycle_pg2">New Cycle</string>
    <string name="title_activity_send_data">Send Data</string>
    <string name="title_activity_add_member">Add Member</string>
    <string name="title_activity_members_list">Members</string>
    <string name="title_activity_send_meeting_data">Send Meeting Data</string>
    <string name="title_activity_member_attendance_history">Attendance History</string>
    <string name="title_activity_activation">Register</string>
    <string name="add_member_gender_prompt">select sex</string>
    <string name="add_member_profession_prompt">Select Profession</string>
    <string name="title_activity_meeting_cash_book_frag">Cash Book</string>
    <string name="title_activity_meeting_send_data_frag">Send Data</string>
    <string name="title_activity_meeting_opening_cash_frag">Starting Cash</string>
    <string name="title_activity_gettings_started_wizard_add_member">Add Member</string>
    <string name="title_activity_gettings_started_wizard_review_members">Review Members</string>
    <string name="title_activity_gettings_started_wizard_add_cycle">New Cycle</string>
    <string name="title_activity_gettings_started_wizard_page_1">Welcome</string>
    <string name="title_activity_gettings_started_wizard_page_2">Pass Code</string>
    <string name="activity_activation_vsla_passkey_info">Enter at least 5 digits that you will remember. A passkey is a secret number you will enter to open Ledger Link at every meeting.</string>
    <string name="title_activity_begin_meeting">Begin Meeting</string>
    <string name="title_activity_settings">Settings</string>
    <string name="image_content_desc">icon</string>
    <string name="title_activity_delete_meeting">DeleteMeetingActivity</string>
    <string name="about_legal">All rights reserved. Not liable for any damage incurred from use of this software.</string>
    <string name="about_version">v.2020013101</string>
    <string name="action_about">About</string>
    <string name="action_recovery">Data Recovery</string>
    <string name="register">REGISTER</string>
    <string name="meeting_is_readonly_warning">Values for this past meeting can not be modified at this time. Meeting is read only.</string>
    <string name="fine_is_previously__paid_warning">This past fine payment cannot be undone or modified at this time.</string>
    <string name="select_member_fine_type_prompt">select fine type</string>
    <string name="title_activity_change_meeting_date">ChangeMeetingDate</string>
    <string name="change_meeting_date_instruction_2">You have issued loans for this meeting. Due dates are calculated based on the date loans were issued. All due dates for these loans will be changed if you change the meeting date.</string>
    <string name="operating_currency">UGX</string>
    <string name="minimum_passkey_length">5</string>
    <string name="loan_repayment_instruction">If a payment is NOT due and no payment is made, press cancel. If a payment is due but not made enter 0 (zero) for payment amount. After entering payment, review new balance.</string>
    <string name="loan_repayment_instruction2">Review new balance and edit interest and next payment date if necessary.</string>
    <string name="loan_issue_instruction">Changing the interest added will change the interest rate for the loan. Changing the date due will change how often payments must be made for the life of the loan.</string>
    <string name="help_forgot_passkey">Forgot your pass key: \nPlease call  0800 222 333</string>
    <string name="helpline">Forgot your pass key: \nPlease call 0771638070</string>
    <string name="data_recovery_notice">To recover your data, kindly fill in the following information</string>
    <string name="finetype_select_fine_type">select fine type</string>
    <string name="finetype_other">Other</string>
    <string name="finetype_latecoming">Latecoming</string>
    <string name="finetype_disorder">Disorder</string>
    <string name="elv_undo">Undo</string>
    <string name="elv_undo_all">Undo All</string>
    <string name="elv_item_deleted">Fine Record Deleted</string>
    <string name="elv_n_items_deleted">%1$s fine Records Deleted</string>
    <string name="cancel">Cancel</string>
    <string name="finished">Finished</string>
    <string name="enter_next">enter next</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="next">next</string>
    <string name="sort_by">Sort By</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="date_default">01 Jan 2013</string>
    <string name="begin">Begin</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="archive">Archive</string>
    <string name="new_text">New Text</string>
    <string name="date_range_default">01 Jan 2013 - 31 Dec 2013</string>
    <string name="name_default">0. FULL NAME</string>
    <string name="outstanding_loan_default">Outstanding: 60,000UGX</string>
    <string name="loan_balance_default">Loan Balance: 60,000UGX</string>
    <string name="date_due_default">Date Due: None</string>
    <string name="today_saving_default">Today: 5,000UGX</string>
    <string name="total_savings_default">Total Savings: 60,000UGX</string>
    <string name="total_welfare_default">Total Welfare: 10,000UGX</string>
    <string name="fine_type">Fine Type</string>
    <string name="amount">Amount</string>
    <string name="paid">Paid</string>
    <string name="in_training_mode">IN TRAINING MODE</string>
    <string name="main_menu">Main Menu</string>
    <string name="occupation">Occupation</string>
    <string name="default_rollcall_date">53. 01-JUL-2013</string>
    <string name="present">Present</string>
    <string name="apologized">Apologized</string>
    <string name="total_fines_default">Total Fines: 60,000UGX</string>
    <string name="loan_number_default">Loan No</string>
    <string name="date">Date</string>
    <string name="comments">Comments</string>
    <string name="change_meeting_date">CHANGE MEETING DATE</string>
    <string name="delete_meeting">DELETE MEETING</string>
    <string name="fines_default">Fines: 5,000UGX</string>
    <string name="loans_repaid_default">Loans Repaid: 50,000 UGX</string>
    <string name="loans_issued_default">Loans Issued: 50,000UGX</string>
    <string name="welfare_default">Welfare: 50,000UGX</string>
    <string name="members_present">Members Present: 28</string>
    <string name="is_everything_correct">Is everything correct?</string>
    <string name="fines">FINES</string>
    <string name="fines_delete_instruction">Check box to indicate paid. Swipe to delete.</string>
    <string name="no_history">No History</string>
    <string name="begin_meeting_instruction">Tap [Begin] to begin a new meeting.</string>
    <string name="current_meeting">CURRENT MEETING</string>
    <string name="edit_before_sending_intruction">You may edit before sending.</string>
    <string name="unsent_past_meeting">UNSENT PAST MEETINGS</string>
    <string name="review_before_sending_instruction">You may not edit, but you may review before sending.</string>
    <string name="send_meetings_reminder">There are several unsent meetings. It is not safe to keep meetings without sending! Please send every week.</string>
    <string name="begin_meeting">BEGIN MEETING</string>
    <string name="new_balance">NEW BALANCE</string>
    <string name="loan_history">LOAN HISTORY</string>
    <string name="no_outsanding_loans">No outstanding loans</string>
    <string name="title_activity_data_recovery">Data Recovery</string>
    <string name="title_activity_passkey_recovery">PassKey Recovery</string>
    <string name="title_activity_training_module">Training Modules</string>
    <string name="title_activity_profile">VSLA Profile</string>
    <string name="action_change_pin">Change PIN</string>
    <string name="profile_padding">30dp</string>
    <string name="title_activity_ledger_link_training">Module 1</string>
    <string name="title_activity_ekeys_training">Module 2</string>
    <string name="title_activity_general_support">Module 3</string>
    <string name="title_activity_meeting_member_loans_issue_frag">MeetingMemberLoansIssueFrag
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_meeting_member_loans_issue">MeetingMemberLoansIssueActivity
    </string>
    <string name="title_activity_meeting_member_loan_repayment">MeetingMemberLoanRepayment</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_mod">Mobile Overdraft</string>
    <string name="vsla_name">VSLA NAME</string>
    <string name="activation_message">Activation Message</string>
    <string name="passkey">Passkey</string>
    <string name="enter_pass_key_here">Enter Pass Key Here</string>
    <string name="sign_in">Sign In</string>
    <string name="version_number">v.2020022201</string>
    <string name="vsla_number">VSLA Number</string>
    <string name="enter_vsla_number">Enter VSLA Number</string>
    <string name="create_a_passkey">Create a Passkey</string>
    <string name="enter_passkey_here">Enter Passkey Here</string>
    <string name="re_enter_passkey_here">Re-enter Passkey Here</string>
    <string name="register_button">Register</string>
    <string name="borrow_from_wellfare">BORROW FROM WELFARE</string>
    <string name="full_name">Full Name</string>
    <string name="when_due_date_of_outstanding_welfare">When is the due date of the outstanding welfare</string>
    <string name="fine_member">FINE MEMBER</string>
    <string name="Select_type_of_fine_and_the_amount">Select type of fine and the amount. Check the box if the member has paid.</string>
    <string name="x_required">(\'\*\' = required)</string>
    <string name="member_number_x">Member No. *</string>
    <string name="surname_x">Surname *</string>
    <string name="other_name_x">Other Names *</string>
    <string name="what_member_does_to_make_money">What does this member do to make money?</string>
    <string name="phone_number">Phone number</string>
    <string name="number_of_cycles_member_completed">Cycles completed</string>
    <string name="middle_cycle_start">MIDDLE CYCLE START</string>
    <string name="vsla_code">VSLA Code</string>
    <string name="member_number">Member No.</string>
    <string name="ioo">100</string>
    <string name="surname">Surname</string>
    <string name="muhahala">Muhahala</string>
    <string name="other_name">Other Name</string>
    <string name="sex_m_f">Sex (M/F)</string>
    <string name="male">Male</string>
    <string name="age">Age</string>
    <string name="age_demo">27</string>
    <string name="app_analyst">Application Analyst</string>
    <string name="phone_demo">0779881904</string>
    <string name="text_demo">3</string>
    <string name="total_saving_o">Total Savings 0 UGX</string>
    <string name="total_welfare_o">Total Welfare 0 UGX</string>
    <string name="total_outstanding_welfare_0">Total Outstanding Welfare 0 UGX</string>
    <string name="loans_outstanding_o">Loans Outstanding 0 UGX</string>
    <string name="switch_language">Switch Language</string>
    <string name="to_edit_your_vslacode">Please note you an not edit the Vsla Code once activated.</string>
    <string name="enter_new_vslacode">Enter New Vsla Code</string>
    <string name="edit_vslacode">Edit Vsla Code</string>
</resources>