<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_about" />

    <item
    android:id="@+id/action_recovery"
    android:orderInCategory="100"
    app:showAsAction="never"
    android:title="@string/action_recovery" />

    <item
        android:id="@+id/action_training_modules"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="Training Modules"
        />
</menu>
