<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/mnuNCPg2Sort"
            android:title="@string/sort_by"
            app:showAsAction="never"
            android:orderInCategory="3"
            android:actionLayout = "@layout/sort_members_action"  />

    <item android:id="@+id/mnuNCPg2Add"
          android:title="@string/add"
          android:orderInCategory="1"
          app:showAsAction="ifRoom|withText"
          android:icon="@drawable/ic_social_add_person"
            />

    <item android:id="@+id/mnuNCPg2Done"
        android:title="@string/done"
        android:orderInCategory="2"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_navigation_accept"
            />

</menu>
