<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/gery_background">


    <TextView android:text="@string/to_edit_your_vslacode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblDRTitle"
        android:textSize="16dp"/>

    <org.applab.ledgerlink.fontutils.TypefaceTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:id="@+id/lblDRPassKey"
        android:layout_below="@+id/lblDRTitle"
        android:text="@string/enter_new_vslacode"/>

    <EditText
        android:id="@+id/txtDREditVslaCode"
        style="@style/CustomEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblDRPassKey"
        android:paddingTop="20dp"
        android:text="@string/vsla_code"/>

    <org.applab.ledgerlink.fontutils.TypefaceButton
        android:id="@+id/btnLogin"
        style="@style/LoginButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/edit_vslacode"
        android:layout_below="@+id/txtDREditVslaCode"/>

</RelativeLayout>